# cookiecutter-udata-plugin

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: MANIFEST.in  README.md  bumpr.rc  pyproject.toml  setup.py  tasks.py
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/tests/: test_{{ cookiecutter.identifier.replace('-', '_') }}_backend.py  test_{{ cookiecutter.identifier.replace('-', '_') }}_preview.py  test_{{ cookiecutter.identifier.replace('-', '_') }}_views.py
{{cookiecutter.project_slug}}/{{cookiecutter.pypackage}}/: __init__.py  harvesters.py  preview.py  tasks.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.pypackage}}/theme/: __init__.py
