
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}]
readme = "README.md"
license = {text = "{{cookiecutter.license}}"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "udata>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "flake8==3.7.8",
    "invoke==1.3.0",
    "pytest-cov==2.6.1",
    "flit==3.6.0" 


    
]
test = [
    "httpretty==0.9.7",
    "mock==3.0.5",
    "pytest-flask==0.15.0",
    "pytest-sugar==0.9.2",
    "pytest==4.6.3"
]

[project.entry-points."udata.plugins"]
event-consumer = "udata_event_consumer"

{% if cookiecutter.has_harvester == 'yes' -%}
[project.entry-points."data.harvesters"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.harvesters:{{ cookiecutter.identifier.title().replace('-', '') }}Backend"
{%- endif %}

{% if cookiecutter.has_theme == 'yes' -%}
[project.entry-points."data.theme"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.theme"
{%- endif %}

{% if cookiecutter.has_views == 'yes' -%}
[project.entry-points."data.views"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.views"
{%- endif %}

{% if cookiecutter.has_metrics == 'yes' -%}
[project.entry-points."data.metrics"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.metrics"
{%- endif %}

{% if cookiecutter.has_models == 'yes' -%}
[project.entry-points."data.models"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.models"
{%- endif %}

{% if cookiecutter.has_linkchecker == 'yes' -%}
[project.entry-points."data.linkcheckers"[
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.linkchecker:{{ cookiecutter.identifier.title().replace('-', '') }}LinkChecker"
{%- endif %}

{% if cookiecutter.has_tasks == 'yes' -%}
[project.entry-points."data.tasks"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.tasks"
{%- endif %}

{% if cookiecutter.has_preview == 'yes' -%}
[project.entry-points."data.preview"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}.preview:{{ cookiecutter.identifier.title().replace('-', '') }}Preview"
{%- endif %}

{% if cookiecutter.has_generic_plugin == 'yes' -%}
[project.entry-points."data.plugins"]
{{cookiecutter.identifier}} = "{{cookiecutter.pypackage}}"
{%- endif %}

[project.urls]
Home = "{{cookiecutter.website}}"

[tool.flit.module]
name = "udata_event_consumer"
